# SeaShell

./: CMakeLists.txt  LICENSE  README.md
examples/: basic.cpp
scripts/: emulate.sh  start.sh
src/: seashell.c  seashell.h  seashell_config.h
